# mwm

./: COPYING  Makefile.am  README.md  autogen.sh  configure.ac
include/: config.h  localdef.h
panner/: Makefile.am  panner.c  panner.man
src/: Makefile.am  WmBitmap.h  WmCDInfo.c  WmCDInfo.h  WmCDecor.c  WmCDecor.h  WmCEvent.c  WmCEvent.h  WmCPlace.c  WmCPlace.h  WmCmd.c  WmCmd.h  WmColormap.c  WmColormap.h  WmDebug.h  WmError.c  WmError.h  WmEvent.c  WmEvent.h  WmFeedback.c  WmFeedback.h  WmFunction.c  WmFunction.h  WmGlobal.h  WmGraphics.c  WmGraphics.h  WmIBitmap.h  WmICCC.h  WmIDecor.c  WmIDecor.h  WmIPlace.c  WmIPlace.h  WmIconBox.c  WmIconBox.h  WmImage.c  WmImage.h  WmInitWs.c  WmInitWs.h  WmKeyFocus.c  WmKeyFocus.h  (+32 more)
src/WmWsmLib/: debug.c  disp.c  free.c  pack.c  recv.c  send.c  util.c  utm_send.c  utm_send.h  wsm_funcs.h  wsm_proto.h
